# dct

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  bench_data.h  csv_import_export.cpp  csv_import_export.h  dct2.cpp  dct2.h  dct_bench.cpp  dct_bench.h  dct_bench_common.h  dct_test.cpp  dct_test.h  h_time.h  img_compressor.cpp  img_compressor.h  main.cpp  my_dct.cpp  my_dct.h  ocv_dct_bench.cpp  ocv_dct_bench.h  rnd_mat_gen.cpp  rnd_mat_gen.h
docs/: chunk_mapping.odg  chunk_mapping_bold.odg  mat1_in.csv  mat1_out.csv  matrici.tar.xz  mkdocs.sh  mydct.md  notes.md  riga1_in.csv  riga1_out.csv  valori.csv  valori.ods
docs/bench_data/: bench_126_steps.csv  bench_126_steps.ods  benchmark_1024.ods
